# comdi-cli

./: .gitignore  README.md  pyproject.toml
cd_cli/: comdirect_api_client.py  deserialize.py  main.py  utils.py
cd_cli/api/: __init__.py  banking_api.py  messages_api.py  session_api.py
cd_cli/models/: __init__.py  account.py  account_balance.py  account_information.py  account_transaction.py  account_transaction_aggregate.py  account_transactions_aggregate.py  aggregated_info.py  amount_value.py  authentication_info.py  balance.py  business_message.py  card.py  card_balance.py  cost_entry.py  cost_group.py  cost_indication_ex_ante.py  currency_string.py  date_string.py  date_time_string.py  depot.py  depot_aggregation.py  depot_position.py  depot_transaction.py  derivative_data.py  dimensions.py  document.py  document_metadata.py  documents_aggregate.py  enum_text.py  execution.py  fixed_term_savings.py  fund_distribution.py  fx_rate_eur.py  inducement.py  installment_loan.py  installment_loan_balance.py  instrument.py  list_resource_account_balance.py  list_resource_account_transaction.py  (+28 more)
